# mcp-tenki

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
mcp_tenki/: main.py
mcp_tenki/domain/: location.py  weather.py
src/: main.py
